--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Document Library/08_Project Closure/01_Meeting Minutes/Moneytor_Meeting Minutes_July 2015.xls
 Document Library/08_Project Closure/01_Meeting Minutes/Moneytor_Meeting Minutes_July 2015.xls
 Document Library/08_Project Closure/01_Meeting Minutes/Moneytor_Meeting Minutes_July 2015.xls
+/AUTOMATA PROJECT/PDA/nbproject/private/
