Automata - classes, UI

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Document Library/08_Project Closure/01_Meeting Minutes/Moneytor_Meeting Minutes_
 Document Library/08_Project Closure/01_Meeting Minutes/Moneytor_Meeting Minutes_July 2015.xls
 Document Library/08_Project Closure/01_Meeting Minutes/Moneytor_Meeting Minutes_July 2015.xls
 /AUTOMATA PROJECT/PDA/nbproject/private/
+/AUTOMATA PROJECT/PDA/build/
